# jellyfin-pi

./: CMakeLists.txt  README.md
src/: main.cpp
